# Language-Detector

./: README.md  config.json  language_detector.py  main.py  model_config.json  mypy.ini  pyproject.toml
docker/: Dockerfile  config.json
